--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "gulp build"
+    "build": "./node_modules/.bin/gulp build"
   },
   "keywords": [],
   "author": "",
